add: controle de estoque
